# duckdb-datadog

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  pages.yml
src/: alerts_table.cpp  datadog_catalog.cpp  datadog_client.cpp  datadog_extension.cpp  datadog_json.cpp  datadog_secret.cpp  logs_table.cpp  send_logs.cpp
src/include/: alerts_table.hpp  datadog_catalog.hpp  datadog_client.hpp  datadog_extension.hpp  datadog_json.hpp  datadog_secret.hpp  logs_table.hpp  send_logs.hpp
test/cpp/: datadog_json_test.cpp
test/e2e/: run_e2e.sh
test/sql/: datadog.test
